feat: 2단계 시작 메시지 수정
Co-Authored-By: H <99153215+hyeon0208@users.noreply.github.com>