@@ -4,13 +4,18 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Scanner;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 public class InputView {
     private static final Set<String> GAME_COMMAND = Set.of("start", "end");
     private static final String MOVE_COMMAND = "move";
     private static final String INVALID_GAME_COMMAND = "start 또는 end만 입력가능합니다.";
     private static final String INVALID_MOVE_COMMAND = "부적절한 명령어입니다. move b2 b3와 같이 입력해주세요.";
-    private static final String START_MESSAGE = "게임 시작은 start, 종료는 end 명령을 입력하세요.";
+    public static final String GAME_START_MESSAGE = "> 체스 게임을 시작합니다.";
+    public static final String START_INFO_MESSAGE = "> 게임 시작 : start";
+    public static final String END_INFO_MESSAGE = "> 게임 종료 : end";
+    private static final String MOVE_INFO_MESSAGE = "> 게임 이동 : move source위치 target위치 - 예. move b2 b3";
+
     private final Scanner scanner;
 
     public InputView() {
@@ -18,7 +23,10 @@ public class InputView {
     }
 
     public String readStartCommand() {
-        System.out.println(START_MESSAGE);
+        System.out.println(GAME_START_MESSAGE);
+        System.out.println(START_INFO_MESSAGE);
+        System.out.println(END_INFO_MESSAGE);
+        System.out.println(MOVE_INFO_MESSAGE);
         String input = scanner.nextLine();
         validateGameCommand(input);
         return input;
@@ -34,7 +42,7 @@ public class InputView {
         String input = scanner.nextLine();
         List<String> splitInput = Arrays.stream(input.split(" "))
                 .map(String::trim)
-                .toList();
+                .collect(Collectors.toList());
         validateMoveCommand(splitInput.get(0));
         splitInput.remove(0);
         return splitInput;
